syntax = "proto3";

package ${package}.persistence;

import "akkaserverless/annotations.proto";

option java_outer_classname = "Domain";

option (akkaserverless.file).event_sourced_entity = {
    name: "MyEntity"
    entity_type: "MyEntity"
    state: { type: "MyState" }
    event: { type: "ValueSet" }
};

message MyState {
    int32 value = 1;
}

message ValueSet {
    string entity_id = 1 [(akkaserverless.field).entity_key = true];
    int32 value = 2;
}
