// Copyright (C) 2021-2024 Lightbend Inc. <https://www.lightbend.com>

// This is the public API offered by the shopping cart value-based entity.

syntax = "proto3";

package com.example.workflow.transfer;

option java_outer_classname = "MoneyTransferApi";

import "kalix/annotations.proto";
import "google/protobuf/empty.proto";

message Transfer {
  string workflow_id = 1 [(kalix.field).id = true];
  string from = 2;
  string to = 3;
  double amount = 4;
}

message State {
  string from = 1;
  string to = 2;
  double amount = 3;
  string log  = 4;
  repeated string sign_offs = 5;
}

message Deposit{
  string account = 1;
  double amount = 2;
}

message Withdraw{
  string account = 1;
  double amount = 2;
}

message Owner {
  string name = 1;
}

service TransferWorkflowService {
  rpc Start(Transfer) returns (google.protobuf.Empty) {}
  rpc SignOff(Owner) returns (google.protobuf.Empty) {}
  rpc Delete(google.protobuf.Empty) returns (google.protobuf.Empty) {}
}
